--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <span>vs. </span>
     <select name="player-type" id="player-type-drop-down">
         <option value="player">Player</option>
-        <option value="CPU">CPU</option>
+        <option value="cpu">CPU</option>
     </select>
 </div>
 <div class="playing-grid">
-    <div class="square 0"><i class="fa-solid fa-x"></i></div>
-    <div class="square 1"><i class="fa-regular fa-circle"></i></div>
-    <div class="square 2"></div>
-    <div class="square 3"></div>
-    <div class="square 4"></div>
-    <div class="square 5"></div>
-    <div class="square 6"></div>
-    <div class="square 7"></div>
-    <div class="square 8"></div>
+    <!-- <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div> -->
 </div>
 
 </html>
